<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_launch_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_start_mode"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"/>
    <Button
        android:id="@+id/btn_standard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/standard"
        android:layout_margin="8dp"
        android:minWidth="120dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_mode"
        app:layout_constraintBottom_toTopOf="@id/btn_singleTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.6"/>
    <Button
        android:id="@+id/btn_singleTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/singleTop"
        android:layout_margin="8dp"
        android:minWidth="120dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/btn_standard"
        app:layout_constraintBottom_toTopOf="@id/btn_singleTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"/>

    <Button
        android:id="@+id/btn_singleTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/singleTask"
        android:layout_margin="8dp"
        android:minWidth="120dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/btn_singleTop"
        app:layout_constraintBottom_toTopOf="@id/btn_singleInstance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"/>

    <Button
        android:id="@+id/btn_singleInstance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/singleInstance"
        android:layout_margin="8dp"
        android:minWidth="120dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/btn_singleTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"/>

</androidx.constraintlayout.widget.ConstraintLayout>